--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <ul>
       <li><a href="article.html">Home</a></li>
       <li><a href="article.html">World</a></li>
-      <li><a href="article.html">Silicon Valley &amp; Tech</a>
+      <li><a href="article.html">Silicon Valley &amp; Tech</a></li>
       <li><a href="article.html">Science &amp; Health</a></li>
       <li><a href="article.html">U.S. Politics</a></li>
     </ul>
 
     <h2>Silicon Valley &amp; Technology</h2>
 
-    <h>Tehran Bans Drones After Security Scares</h3>
-    <img src="400.pn" alt="Drones in Tehran"/>
+    <h3>Tehran Bans Drones After Security Scares</h3>
+    <img src="400.png" alt="Drones in Tehran" />
 
     <p>The Iranian military has banned the unauthorized use of drones in the capital Tehran, after several security scares caused by unpiloted aircraft that are increasingly popular with hobbyists and filmmakers.</p>
 
@@ -38,7 +38,7 @@
     <p><a href="article.html">Read More</a></p>
 
     <h3>Zuckerberg's Goal: Remake а World Facebook Helped Create</h3>
-    <img src="400.png" />
+    <img src="400.png" alt="Zuckerberg goal" />
 
     <p>Mark Zuckerberg helped create the modern world by connecting nearly a quarter of its citizens to Facebook and giving them a platform to share, well, everything - baby pictures and Pepe memes, social updates and abusive bullying, helpful how-to videos and live-streamed violence.</p>
 
@@ -69,7 +69,7 @@
       <li><a href="article.html">Privacy Notice</a></li>
       <li><a href="article.html">Abour VOA</a></li>
       <li><a href="article.html">Contact VOA</a></li>
-
+    </ul>
 
     <h2>Follow Us</h2>
 
