--- a/article.html
+++ b/article.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="style.ccs" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
     <title>Voice of America</title>
   </head>
 
